--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" href="StyleSheet1.css"/>
     <script src="myscript1.js"></script> 
 
-    
-      </head>
+    </head>
       <body>
-       <button id="button1" onclick="myFunction()">Mörkt tema</button>
+       <button id="button1" onclick="myFunction()">Mörkt läge</button>
      <script>
       function myFunction() {
          var element = document.body;
@@ -41,6 +40,23 @@
             <h2>sekunder</h2>
             </div>
 </section>
+
+<div class="vertical-menu">
+    <a href="index.html">Om</a>
+    <a href="Contact">Kontakt</a>
+    <a href="index.html">Om</a>
+</div>
+
+<footer class="Social-media">
+    <p>Säg hej till mig nedan👇🏼</p>
+
+    <ul class="social">
+        <li><a class="GitHub" href="https://github.com/hultmanoskar">GitHub</a></li>
+        <li><a class="Facebook" href="https://www.facebook.com/oskar.hultman/">Facebook</a></li>
+        <li><a class="Instagram" href="https://www.instagram.com/carlgustavoskar/">Instagram</a></li>
+    </ul>
+  
+</footer>
 
 </body>
 </html>
