--- a/about.html
+++ b/about.html
@@ -4,9 +4,19 @@
 <head>
     <meta charset="utf-8" />
     <title>min sida</title>
-</head>
-<body>
-    <p> hej hej hej hej</p>
-    
-</body>
-</html>
+    <link rel="stylesheet" href="styleSheetAbout.css" />
+    </head>
+    <body>  
+        <h1>Välkommen till min första webbsida!</h1>
+        <p> Jag har valt att göra denna sida som en webb-app eftersom jag ville konstruera en enkel webbsida med hjälp utav HTML, CSS och Javascript. 
+            Jag ville skapa en sida som var gratis att göra, lätt att underhålla och göra ändringar i samt att webbsidan skulle göras med Github. Denna webbsida har ingen tung grafik och det finns inga funktioner på sidan som behöver utnyttja någon av mobiltelefonens funktioner. Därför valde jag att skapa en webb-app. 
+            Om jag istället skulle skapat en native-app hade den varit konstruerad specifikt för ett operativsystem. Native-appen hade haft bättre hastighet och användarupplevelse. Appen hade kommit åt telefonens alla funktioner och klarat av tyngre grafik, som i olika spel till exempel. 
+            Min app är som sagt enkel och utan tung grafik och skulle därför inte vara lämplig att göra som en native-app. 
+            Hade jag skapat en hybrid-app hade appen också fungerat på alla plattformar. Appen hade kommit åt vissa funktioner i telefonen som exempelvis: kamera och gps. Prestandan och hastigheten hade varit sämre jämfört med native-appen men hybrid-appen hade varit enklare att skapa. Hybrid-appen hade också kunnat vara byggd på HTML, CSS, javascript som min webb-app är. </p>
+            </div> 
+            </body>
+            </html>
+
+
+
+
