--- a/index.html
+++ b/index.html
@@ -16,12 +16,10 @@
          element.classList.toggle("dark-mode");
       }
       </script>
-
-
 <section> 
 <div class="timer">
     <div>
-        <h1 class="welcome">Välkomna</h1>
+        <h1 class="rubrik">Inlämning</h1>
     <div class="countdown">
     <div class="container-day">
        <h2 class="day">0</h2>
@@ -41,16 +39,27 @@
             </div>
 </section>
 
+
+
 <div class="vertical-menu">
-    <a href="index.html">Om</a>
-    <a href="Contact">Kontakt</a>
-    <a href="index.html">Om</a>
+    <a href="#">Hem</a>
+    <a href="about.html">Om</a>
+    <a href="#">Kontakt</a> 
+    
 </div>
+<div class="right-column">
+    <p>Tryck här för lite musik</p>
+    <img id="icon" onclick="playsong()" src="PinClipart.com_play-button-clipart_680702.png">
+
+</div>
+
+<audio id="mySong">
+    <source src="mysong.mp3" type="audio/mp3">
+</audio>
 
 <footer class="Social-media">
     <p>Säg hej till mig nedan👇🏼</p>
-
-    <ul class="social">
+<ul class="social">
         <li><a class="GitHub" href="https://github.com/hultmanoskar">GitHub</a></li>
         <li><a class="Facebook" href="https://www.facebook.com/oskar.hultman/">Facebook</a></li>
         <li><a class="Instagram" href="https://www.instagram.com/carlgustavoskar/">Instagram</a></li>
